# heart-portal

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  check_compile.py  check_errors.sh  extensions.toml  loom.html  run_check.py  run_test.sh  simple_check.sh  syntax_check.py  test_build.sh  test_compilation.rs  test_compile.rs  test_compile.sh  test_deps.rs  test_extensions.py  test_minimal.rs  test_syntax.rs
.cargo/: config.toml
.cursor/subagents/: phase2-extension-manager.md
.github/workflows/: release.yml
docs/: EXTENSIONS.md  PHASE2-HOT-RELOAD.md  PORTAL-INSTALL-FLOW.md
heart-mcp/: Cargo.toml
heart-mcp/src/: client.rs  connection.rs  ipc.rs  lib.rs  main.rs  mcp_ipc.rs
mcp-supervisor/: Cargo.toml
mcp-supervisor/src/: client.rs  connection.rs  lib.rs  protocol.rs
portal/: Cargo.toml  Dockerfile  cowork.html
portal/cowork-ui/: components.js  index.html  server.cjs
portal/src/: config.rs  cowork.rs  exec_policy.rs  extensions.rs  main.rs  process_manager.rs  protocol.rs  relay_client.rs  test_imports.rs  tools.rs  tools_backup.rs  tools_flat.rs  unused_tools.rs
portal/src/tools/: custom.rs  exec.rs  file.rs  mod.rs  process.rs  search.rs  web.rs  web_search.rs
portal/starter-kit/: README.md
portal/starter-kit/guides/: diy-tools.md  portal-ref.md  web-search.md
portal/starter-kit/scripts/: search.sh
portal/starter-kit/tools/: mcp.toml
portal/starter-kit/tools/examples/: hello-tool.js
shared/: Cargo.toml
shared/src/: action_digest.rs  auth_tokens.rs  bedrock.rs  being.rs  being_home.rs  config.rs  event.rs  fingerprint.rs  landscape.rs  lib.rs  moment.rs  provider.rs  reality.rs  reality_reconcile.rs  sanitize.rs  seam_filter.rs  seam_stream_filter.rs  stream_accessor.rs  tools.rs  types.rs
shared/tests/: concurrent_access.rs
simple_test/: Cargo.toml
simple_test/src/: main.rs
