[package]
name = "heart-mcp"
version = "0.12.0"
edition = "2024"

[lib]
name = "heart_mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
notify = "6"

[dev-dependencies]
tempfile = "3"
