[package]
name = "heart-shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
base64 = "0.22"
subtle = "2.6"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }